# temp-copy

calling_test/: Dockerfile  NOTES.md  api_postcall.py  approach_postcall.py  azure-pipelines.yml  cosmos-db.md  db.py  main.py  next_step.md  next_steps.md  outbound-test.py  pyproject.toml  python_postcall.py  react_backend.py  react_example.jsx  requirements.txt  utils.py  utils_two.py  utils_vad.py
calling_test/api/: api.md  main.py
calling_test/data/: mock_callerdata.json  mock_postcalldata.json  mock_precalldata.json  mock_rawdata.json
calling_test/postcall/: main.py
calling_test/postcall/tools/: actionitems.py  categorization.py  summary.py
calling_test/prompt/: agent_configuration.cfg  call_one.py  call_two.py
